# deepdoc

./: .codewiki.yaml  .deepdoc.yaml  .deepdoc_file_map.json  .deepdoc_plan.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEEPDOC_CHANGES.md  HANDOFF.md  README.md  future.txt  pyproject.toml
.deepdoc/: file_map.json  ledger.json  plan.json  scan_cache.json  state.json  sync_receipt.json
.github/workflows/: github-pages.yml  release-vscode-extension.yml  release.yml  tests.yml
chatbot_backend/: .env.example  app.py  requirements.txt  schemas.py  settings.py
codewiki/: __init__.py  __main__.py  benchmark_v2.py  cli.py  config.py  generator_v2.py  manifest.py  openapi.py  persistence_v2.py  pipeline_v2.py  planner.py  planner_v2.py  prompts_v2.py  scan_v2.py  smart_update_v2.py  updater_v2.py
codewiki/chatbot/: __init__.py  chunker.py  docs_summary.py  indexer.py  persistence.py  providers.py  scaffold.py  service.py  settings.py  types.py
codewiki/llm/: client.py  litellm_compat.py
codewiki/parser/: api_detector.py  base.py  go_parser.py  php_parser.py  python_parser.py  vue_parser.py
codewiki/site/: fumadocs_builder_v2.py  mintlify_builder_v2.py
deepdoc/: README.md  SPEED_AUDIT.md  __init__.py  __main__.py  _legacy_types.py  benchmark_v2.py  call_graph.py  changelog_writer.py  cli.py  config.py  generator_v2.py  git-integration-plan.md  manifest.py  openapi.py  persistence_v2.py  pipeline_v2.py  plan_contract.py  planner_v2.py  prompts_v2.py  scan_v2.py  smart_update_v2.py  source_metadata.py  telemetry.py  updater_v2.py  v2_models.py
deepdoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
deepdoc/chatbot/: __init__.py  answer_mixin.py  chunker.py  constants.py  deep_research.py  docs_summary.py  embedding_capabilities.py  embeddings.py  indexer.py  linking.py  live_fallback_mixin.py  persistence.py  providers.py  routes.py  (+7 more)
examples/: deepdoc-refresh.yml
hosted-runner/: Dockerfile  app.py  job.py  pipeline.py  requirements.txt
site/: mdx-components.tsx  next.config.mjs  package-lock.json  package.json  source.config.mjs  tsconfig.json
tests/: conftest.py  test_benchmark_scorecard.py  test_call_graph.py  test_changelog.py  test_chatbot_config.py  test_chatbot_embeddings.py  test_chatbot_eval.py  test_chatbot_index.py  test_chatbot_persistence.py  test_chatbot_providers.py  test_chatbot_query.py  test_chatbot_relationship.py  test_chatbot_scaffold.py  test_chatbot_source_archive.py  test_classify.py  test_cli_generate.py  test_cli_serve.py  test_cli_update.py  test_consistency_pass.py  test_embedding_capabilities.py  test_flow_candidates.py  test_framework_fixtures.py  test_framework_support.py  test_fumadocs_builder.py  test_generation_evidence.py  test_internal_docs_metadata.py  test_litellm_compat.py  test_llm_json_utils.py  test_llm_retry.py  test_manifest_performance.py  test_mdx_compile_gate.py  test_mkdocs_builder.py  test_next_builder.py  test_parallel_pipeline.py  test_parallel_scan.py  test_parser_ranges.py  test_phase1_perf.py  test_plan_contract.py  test_planner_assignment_partition.py  test_planner_consolidation.py  (+10 more)
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
web/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+184 files in other folders)
