[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codewiki"
version = "0.1.0"
description = "Auto-generate beautiful docs from any codebase"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "litellm>=1.40",
    "gitpython>=3.1",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.22",
    "tree-sitter-javascript>=0.22",
    "tree-sitter-typescript>=0.22",
    "tree-sitter-go>=0.22",
    "tree-sitter-php>=0.22",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
chatbot = [
    "numpy>=1.26",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.scripts]
codewiki = "codewiki.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codewiki*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
