[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepdoc"
version = "1.7.1"
description = "Auto-generate beautiful docs from any codebase"
readme = "README.md"
authors = [
    { name = "Pranav Kumar" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "litellm>=1.40",
    "gitpython>=3.1",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.22",
    "tree-sitter-javascript>=0.22",
    "tree-sitter-typescript>=0.22",
    "tree-sitter-go>=0.22",
    "tree-sitter-php>=0.22",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
chatbot = [
    "numpy>=1.26",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "fastembed>=0.3.0",
]

[project.scripts]
deepdoc = "deepdoc.cli:main"

[project.urls]
Homepage = "https://github.com/tss-pranavkumar/deepdoc"
Repository = "https://github.com/tss-pranavkumar/deepdoc"
Issues = "https://github.com/tss-pranavkumar/deepdoc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepdoc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
